--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1", features = ["full"] }
 serde = "1.0.150"
 futures = "0.3"
 dotenv = "0.15.0"
+num-integer = "0.1.45"
 
 [dependencies.mongodb]
 version = "2.3.0"
